--- a/package.json
+++ b/package.json
@@ -5,11 +5,26 @@
   "private": false,
   "author": "Linnovate <mean@linnovate.net>",
   "contributors": [
-    { "name": "Lior Kesos", "mail": "lior@linnovate.net" },
-    { "name": "Yonatan Ellman", "mail": "yonatan@linnovate.net" },
-    { "name": "Ehud Shahak", "mail": "ehud@linnovate.net" },
-    { "name": "Amos Haviv", "mail": "mail@amoshaviv" },
-    { "name": "Drew Fyock", "mail": "drew@steelbisondev.com" }
+    {
+      "name": "Lior Kesos",
+      "mail": "lior@linnovate.net"
+    },
+    {
+      "name": "Yonatan Ellman",
+      "mail": "yonatan@linnovate.net"
+    },
+    {
+      "name": "Ehud Shahak",
+      "mail": "ehud@linnovate.net"
+    },
+    {
+      "name": "Amos Haviv",
+      "mail": "mail@amoshaviv"
+    },
+    {
+      "name": "Drew Fyock",
+      "mail": "drew@steelbisondev.com"
+    }
   ],
   "mean": "0.3.3",
   "repository": {
@@ -39,6 +54,7 @@
     "express-session": "^1.1.0",
     "express-validator": "^2.1.1",
     "forever": "^0.11.1",
+    "gridfs-stream": "^0.5.1",
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
@@ -52,11 +68,11 @@
     "load-grunt-tasks": "^0.4.0",
     "lodash": "^2.4.1",
     "mean-connect-mongo": "0.4.3",
-    "gridfs-stream": "^0.5.1",
     "mean-logger": "0.0.1",
     "meanio": "0.4.x",
     "method-override": "^1.0.0",
     "mongoose": "^3.8.8",
+    "mongoose-paginate": "^3.1.0",
     "morgan": "^1.0.0",
     "passport": "^0.2.0",
     "passport-facebook": "^1.0.3",
