--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "assetmanager": "^1.0.0",
+    "bluebird": "^2.3.0",
     "body-parser": "^1.2.0",
     "bower": "^1.3.3",
     "compression": "^1.0.1",
@@ -81,6 +82,7 @@
     "passport-linkedin": "^0.1.3",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
+    "q": "^1.0.1",
     "serve-favicon": "^2.0.0",
     "swig": "^1.3.2",
     "time-grunt": "^0.3.1",
